<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_start">

    <TextView
        android:id="@+id/textViewEnterEmail"
        style="@style/noteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_user"
        android:textColor="@color/dark_indigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/user_login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterEmail" />

    <TextView
        android:id="@+id/textViewEnterPass"
        style="@style/noteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/enter_pass"
        android:textColor="@color/dark_indigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterEmail" />

    <EditText
        android:id="@+id/editTextEnterPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/pass_login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterPass" />

    <Button
        android:id="@+id/buttonCreateFinishUser"
        style="@style/buttonStyle"
        android:layout_width="147dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="132dp"
        android:text="@string/finish_user"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonCreateAccountPT"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterPass" />

    <Button
        android:id="@+id/buttonCreateAccountPT"
        style="@style/buttonStyle"
        android:layout_width="180dp"
        android:layout_height="72dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="24dp"
        android:text="@string/finish_pt"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterPass" />

</androidx.constraintlayout.widget.ConstraintLayout>