<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionLog">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_indigo"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="Nutrition Log"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/header" />

    <TextView
        android:id="@+id/textViewSearchItem"
        style="@style/attentionNoteStyle"
        android:layout_width="382dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/textviewSearchTOAddItemNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/editTextFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/TextViewFoodTypeHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchItem" />

    <Button
        android:id="@+id/buttonSearchFoodItem"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonSeachFoodItemNameLable"
        app:layout_constraintStart_toEndOf="@+id/editTextFoodName"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchItem" />

    <TextView
        android:id="@+id/TextViewCaloriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewCaloriesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFoodName" />

    <TextView
        android:id="@+id/TextViewCarbohydrateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewCarbohydrateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewCaloriesLabel" />

    <TextView
        android:id="@+id/TextViewFoodTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewFoodTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewCarbohydrateLabel" />

    <TextView
        android:id="@+id/TextViewProteinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewProteinLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewFoodTypeLabel" />

    <TextView
        android:id="@+id/TextViewSaturatedFatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewSaturatedFatLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewProteinLabel" />

    <TextView
        android:id="@+id/TextViewSodiumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewSodiumLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewSaturatedFatLabel" />

    <TextView
        android:id="@+id/TextViewSugarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewSugarLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewSodiumLabel" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewCaloriesLabel"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchFoodItem" />

    <EditText
        android:id="@+id/editTextCarbohydrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewCarbohydrateLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextCalories" />

    <EditText
        android:id="@+id/editTextFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewFoodTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarbohydrate" />

    <EditText
        android:id="@+id/editTextProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewProteinLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextFoodType" />

    <EditText
        android:id="@+id/editTextSaturatedFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewSaturatedFatLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextProtein" />

    <EditText
        android:id="@+id/editTextSodium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewSodiumLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextSaturatedFat" />

    <EditText
        android:id="@+id/editTextSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TextViewSugarLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextSodium" />

</androidx.constraintlayout.widget.ConstraintLayout>